--- a/www/css/superfish.css
+++ b/www/css/superfish.css
@@ -13,7 +13,7 @@
 .sf-menu ul {
 	position:		absolute;
 	top:			-999em;
-	width:			10em; /* left offset of submenus need to match (see below) */
+	width:			12.5em; /* left offset of submenus need to match (see below) */
 	height: 		2.5em;
 	
 }
@@ -44,7 +44,7 @@ ul.sf-menu li.sfHover li ul {
 }
 ul.sf-menu li li:hover ul,
 ul.sf-menu li li.sfHover ul {
-	left:			10em; /* match ul width */
+	left:			12.5em; /* match ul width */
 	top:			0;
 }
 ul.sf-menu li li:hover li ul,
@@ -85,7 +85,7 @@ ul.sf-menu li li li.sfHover ul {
 .sf-menu li:hover, .sf-menu li.sfHover,
 .sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active {
 	outline:		0;
-	background-color: #65CAFE;
+	background-color: #BFE9FF;
 }
 
 /*** arrows **/
